--- a/paper/references.bib
+++ b/paper/references.bib
@@ -53,16 +53,6 @@
     doi = {10.21105/joss.01686},
   }
 
-  @InCollection{knitr,
-    booktitle = {Implementing Reproducible Computational Research},
-    editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
-    title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
-    author = {Yihui Xie},
-    publisher = {Chapman and Hall/CRC},
-    year = {2014},
-    note = {ISBN 978-1466561595},
-  }
-
   @Manual{arrow,
     title = {arrow: Integration to 'Apache' 'Arrow'},
     author = {Neal Richardson and Ian Cook and Nic Crane and Dewey Dunnington and Romain François and Jonathan Keane and Dragoș Moldovan-Grünfeld and Jeroen Ooms and Jacob Wujciak-Jens and {Apache Arrow}},
@@ -86,3 +76,19 @@
     note = {R package version 1.1.4},
     url = {https://CRAN.R-project.org/package=dplyr},
   }
+  
+  @misc{unicef2022underfive,
+  title = {Under-Five Mortality},
+  author = {{UNICEF}},
+  year = {2022},
+  url = {https://data.unicef.org/topic/child-survival/under-five-mortality/#:~:text=The%20under-five%20mortality%20rate%20refers%20to%20the%20probability,age%20of%205%20dying%20every%20day%20in%202022.},
+  note = {Accessed on November 16, 2024}
+}
+
+@misc{who2024childmortality,
+  title = {Child Mortality and Causes of Death},
+  author = {{World Health Organization}},
+  year = {2024},
+  url = {https://www.who.int/data/gho/data/themes/topics/topic-details/GHO/child-mortality-and-causes-of-death},
+  note = {Accessed on November 16, 2024}
+}
