--- a/paper/references.bib
+++ b/paper/references.bib
@@ -92,3 +92,11 @@
   url = {https://www.who.int/data/gho/data/themes/topics/topic-details/GHO/child-mortality-and-causes-of-death},
   note = {Accessed on November 16, 2024}
 }
+
+@misc{who2024,
+  title = {Children: Reducing Mortality},
+  author = {{World Health Organization}},
+  year = {n.d.},
+  url = {https://www.who.int/news-room/fact-sheets/detail/children-reducing-mortality#:~:text=There%20are%20two%20targets%3A%201%20Reduce%20newborn%20mortality,25%20per%201000%20live%20births%20in%20every%20country.},
+  note = {Accessed November 18, 2024}
+}
